Implemented ProductDetail component

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Atlan AI Models Marketplace" />
 
-		<!-- Font: Source Sans 3 (400, 500, 600, 700) -->
+		<!-- Font: Source Sans 3 (400, 500, 600, 700) & Fira Code (400) -->
 		<link
 			rel="stylesheet"
-			href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;500;600;700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Source+Sans+3:wght@400;500;600;700&display=swap"
 		/>
 
 		<title>Atlan Marketplace</title>
