--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,12 @@
 		<meta name="description" content="Atlan AI Models Marketplace" />
 
 		<!-- Font: Source Sans 3 (400, 500, 600, 700) & Fira Code (400) -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
 		<link
 			rel="stylesheet"
-			href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Source+Sans+3:wght@400;500;600;700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@1,500&display=swap"
 		/>
 
 		<title>Atlan Marketplace</title>
