--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
 		<link
 			rel="stylesheet"
-			href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@1,500&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Source+Sans+3:wght@400;500;600;700&display=swap"
 		/>
 
 		<title>Atlan Marketplace</title>
